tests/specs/run/jsx_import_source/jsx_import_source_error.out
Check [WILDCARD]jsx_import_source_no_pragma.tsx
TS2875 [ERROR]: This JSX tag requires the module path './nonexistent/jsx-runtime' to exist, but none could be found. Make sure you have types for the appropriate package installed.
  return <A></A>;
         ^
    at file:///[WILDLINE]/jsx_import_source_no_pragma.tsx:6:10

error: Type checking failed.

  info: The program failed type-checking, but it still might work correctly.
  hint: Re-run with --no-check to skip type-checking.
